2009-02-17  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method.c
	  src/wireless-security/eap-method.h
		- Consolidate CA certificate nag dialog handling in the EAP method
			to get correct dialog destruction and reduce code.  Fixes crash
			when nag dialog would come up the second time.

	* src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-peap.h
	  src/wireless-security/eap-method-tls.c
	  src/wireless-security/eap-method-tls.h
	  src/wireless-security/eap-method-ttls.c
	  src/wireless-security/eap-method-ttls.h
		- Move CA certificate nag dialog handling to EAPMethod class

	* src/applet-device-wifi.c
		- (wireless_dialog_response_cb, get_secrets_dialog_response_cb):
			don't destroy nag dialog with parent; the EAP method object
			takes care of destruction for us

2009-02-16  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/gconf-upgrade.h
	  src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_migrate_0_7_autoconnect_default): update autoconnect
			GConf entries to preserve behavior now that autoconnect
			defaults to TRUE in libnm-util

2009-02-16  Alexander Sack  <asac@ubuntu.com>

	* src/applet.c
		- (nma_menu_show_cb, nma_menu_deactivate_cb, applet_update_icon):
			use gtk_status_icon_set_tooltip_text() on GTK+ >= 2.15

2009-02-13  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (add_one_ap_menu_item): fix max signal strength calculation with
			 multiple APs of the same SSID (rh #475123)

2009-02-12  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/vpn-helpers.c
		- (export_vpn_to_file_cb): fix export validtity checks (rh #480496)

2009-02-12  Dan Williams  <dcbw@redhat.com>

	* icons/
		- Fix fallout from icon move; install icons to the right directories

2009-02-12  Dan Williams  <dcbw@redhat.com>

	* icons/
		- Reorganize icons into directories for each size, and replace
			nm-no-connection and nm-device-wired icons with less-ugly