@@ -231,6 +231,9 @@ nm_gconf_get_keyring_items (NMConnection *connection,
                             gboolean include_private_passwords,
                             GError **error);
 
+void
+nm_gconf_clear_keyring_items (NMConnection *connection);
+
 typedef void (*PreKeyringCallback) (gpointer user_data);
 void nm_gconf_set_pre_keyring_callback (PreKeyringCallback func, gpointer user_data);
 
